[gd_scene load_steps=7 format=3 uid="uid://cm0013yp7rho8"]

[ext_resource type="Script" path="res://scripts/user_interface/uiCustomRepairButton.gd" id="1_0loa3"]
[ext_resource type="Texture2D" uid="uid://n3be8sd47yqk" path="res://images/character_sprites/archie/rest_archie.png" id="1_lklft"]
[ext_resource type="PackedScene" uid="uid://cllnwecy8w0yp" path="res://scenes/user_interface/ItemComponentIcon.tscn" id="3_w0lvg"]
[ext_resource type="Script" path="res://scripts/user_interface/uiTimerBar.gd" id="5_65xil"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mumdi"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_right = 4
border_color = Color(1, 1, 1, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_icdui"]
bg_color = Color(1, 1, 1, 0.466667)

[node name="CustomButton" type="Button"]
clip_contents = true
custom_minimum_size = Vector2(160, 38)
offset_right = 160.0
offset_bottom = 41.0
alignment = 0
script = ExtResource("1_0loa3")
hold_time = 0.25

[node name="Portrait" type="TextureRect" parent="."]
layout_mode = 2
offset_left = -12.0
offset_top = -17.0
offset_right = 52.0
offset_bottom = 47.0
size_flags_horizontal = 0
texture = ExtResource("1_lklft")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 19
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="ItemComponentIcon" parent="MarginContainer/HBoxContainer" instance=ExtResource("3_w0lvg")]
layout_mode = 2
size_flags_horizontal = 8

[node name="TextureRect3" type="Label" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemComponentIcon2" parent="MarginContainer/HBoxContainer" instance=ExtResource("3_w0lvg")]
layout_mode = 2
size_flags_horizontal = 8

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Sounds"

[node name="HoldProgress" type="ProgressBar" parent="." node_paths=PackedStringArray("timer")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_mumdi")
theme_override_styles/fill = SubResource("StyleBoxFlat_icdui")
value = 25.0
show_percentage = false
script = ExtResource("5_65xil")
timer = NodePath("../HoldTimer")

[node name="HoldTimer" type="Timer" parent="."]
one_shot = true

[node name="HoldDelay" type="Timer" parent="."]
one_shot = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_hold_timer_timeout"]
